<resources>
    <string name="app_name">Pixel Share</string>
    <string name="please_wait">Please wait</string>
    <string name="failed_load">Error</string>
    <string name="try_again">try again</string>
    <string name="comments">Comments</string>
    <string name="author_name">Author: %1$s</string>
    <string name="add_comment">add comment</string>
    <string name="comment_hint">Поделитесь, чем вам нравится это картина</string>
    <string name="publish">publish</string>
    <string name="other_works_author">other works of the author</string>
    <string name="show_comments">Show %1$d comments</string>
    <string name="comment_sent_success">Comment sent successfully</string>
    <string name="error_has_occurred">An error has occurred</string>
    <string name="empty_list">Empty list</string>
    <string name="default_avatar_will_used">If you don\'t select an avatar, the default avatar will be used.</string>
    <string name="sign_up">sign up</string>
    <string name="choose_avatar">Choose an avatar</string>
    <string name="failed_image_load">Failed image load</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="failed_sign_up">Sign up failed</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="password_warning">Password mismatch</string>
    <string name="weak_password">Weak password</string>
    <string name="empty_field">Empty field</string>
    <string name="success_sign_up">Account has been created successfully</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="repeat_password">repeat password</string>
    <string name="previews">Preview</string>
    <string name="wrong_password">Wrong password</string>
    <string name="account_not_found">Account not found</string>
    <string name="bad_internet">Bad internet</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">Profile</string>
    <string name="invalid_image">Invalid Image</string>
    <string name="failed_create_image">Failed create image</string>
    <string name="name_image">Name the image</string>
    <string name="description_for_image">Description for the image</string>
    <string name="create_image">Create Image</string>
    <string name="followers">Followers</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscriptions">Subscriptions</string>
</resources>