<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentations.main.tabs.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/large_space"
            app:layout_constraintBottom_toTopOf="@id/nameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_space"
            app:layout_constraintBottom_toTopOf="@id/linearlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarImageView"
            tools:text="username" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/subscribeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/countFollowersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="99" />

                <TextView
                    style="@style/HintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/small_space"
                android:layout_marginEnd="@dimen/small_space"
                android:background="@color/gray_300" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/countSubscribesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="99" />

                <TextView
                    style="@style/HintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscriptions" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subscribeButton"
            style="@style/SubscribeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/subscribe"
            app:layout_constraintBottom_toTopOf="@id/imagesRecyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imagesRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscribeButton" />

        <ProgressBar
            android:id="@+id/imagesProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscribeButton"
            app:layout_constraintBottom_toBottomOf="parent" />

        <include
            android:id="@+id/imagesTryAgainContainer"
            layout="@layout/error_container"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progressContainer"
        layout="@layout/progress_container"
        android:visibility="gone" />

    <include
        android:id="@+id/tryAgainContainer"
        layout="@layout/error_container"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>